--- a/.github/workflows/wp-phpunit.yml
+++ b/.github/workflows/wp-phpunit.yml
@@ -7,11 +7,11 @@ name: WordPress Tests
 on:
   push:
     branches:
-      - trunk
+      - main
       - develop
   pull_request:
     branches:
-      - trunk
+      - main
       - develop
 
 jobs:
