--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <ruleset name="WordPress Core Plugins">
-    <description>Keep long array syntax.</description>
+    <description>Basic WordPress Core syntax.</description>
 
     <!-- Show progress and sniff codes in all reports -->
     <arg value="ps"/>
@@ -11,34 +11,33 @@
     <!-- Exclude these -->
     <exclude-pattern>/vendor/*</exclude-pattern>
     <exclude-pattern>/node_modules/*</exclude-pattern>
-    <exclude-pattern>/tests/*</exclude-pattern>
-    <exclude-pattern>/test-plugins/*</exclude-pattern>
-
-    <rule ref="WordPress">
-        <!-- <exclude name="WordPress.Files.FileName" /> -->
-        <exclude name="WordPress.Files.FileName.InvalidClassFileName"/>
-        <exclude name="WordPress.Files.FileName.NotHyphenatedLowercase"/>
-        <exclude name="WordPress.NamingConventions.ValidVariableName"/>
-        <exclude name="WordPress.WP.I18n.NonSingularStringLiteralText"/>
-        <exclude name="WordPress.PHP.NoSilencedErrors.Discouraged"/>
-        <exclude name="WordPress.PHP.DisallowShortTernary.Found"/>
-    </rule>
 
     <!-- Enforce space before closing parenthesis -->
     <rule ref="Squiz.Functions.FunctionDeclarationArgumentSpacing.SpacingBeforeClose">
         <severity>5</severity>
     </rule>
+    <rule ref="Squiz.Functions">
+        <exclude name="Squiz.Functions.FunctionDeclarationArgumentSpacing.SpacingBeforeClose"/>
+        <exclude name="Squiz.Functions.MultiLineFunctionDeclaration.SpaceAfterFunction"/>
+        <exclude name="Squiz.Functions.MultiLineFunctionDeclaration.BraceOnSameLine"/>
+    </rule>
     <rule ref="Squiz.ControlStructures">
         <exclude name="Squiz.ControlStructures.ControlSignature.SpaceAfterCloseBrace"/>
         <exclude name="Squiz.ControlStructures.ForEachLoopDeclaration.SpaceAfterOpen"/>
         <exclude name="Squiz.ControlStructures.ForEachLoopDeclaration.SpaceBeforeClose"/>
+        <exclude name="Squiz.ControlStructures.InlineIfDeclaration.NotSingleLine"/>
     </rule>
 
-    <rule ref="Universal">
-        <exclude name="Universal.Namespaces.EnforceCurlyBraceSyntax.Forbidden"/>
-        <exclude name="Universal.NamingConventions.NoReservedKeywordParameterNames.trueFound"/>
+    <rule ref="Universal.Classes">
         <exclude name="Universal.Classes.RequireFinalClass.NonFinalClassFound"/>
+    </rule>
+    <rule ref="Universal.NamingConventions">
+        <exclude name="Universal.NamingConventions.NoReservedKeywordParameterNames.trueFound"/>
+    </rule>
+    <rule ref="Universal.Namespaces">
+        <exclude name="Universal.Namespaces.EnforceCurlyBraceSyntax.Forbidden"/>
+    </rule>
+    <rule ref="Universal.FunctionDeclarations">
         <exclude name="Universal.FunctionDeclarations.NoLongClosures.ExceedsRecommended"/>
-        <exclude name="Universal.ControlStructures.IfElseDeclaration.NoNewLine"/>
     </rule>
 </ruleset>
