--- a/.github/workflows/wp-phpunit.yml
+++ b/.github/workflows/wp-phpunit.yml
@@ -20,8 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions:
-          ["7.4", "8.0", "8.1", "8.2", "8.3"]
+        php-versions: ["7.4", "8.0", "8.1", "8.2", "8.3"]
 
     name: PHP ${{ matrix.php-versions }} Test on ubantu-latest
     steps:
@@ -49,6 +48,9 @@ jobs:
 
       - name: Composer install
         run: composer install --optimize-autoloader --prefer-dist
+
+      - name: Install SVN
+        run: sudo apt-get update && sudo apt-get install -y subversion
 
       - name: Install WP Tests
         run: bash bin/install-wp-tests.sh wordpress_test root root 127.0.0.1 latest
